--- a/arch/arm/configs/cyanogenmod_ms013g_defconfig
+++ b/arch/arm/configs/cyanogenmod_ms013g_defconfig
@@ -265,6 +265,10 @@ CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
 
+
+# Hotplugs
+CONFIG_INTELLI_PLUG=y
+
 #
 # System Type
 #
