--- a/arch/arm/configs/cyanogenmod_ms013g_defconfig
+++ b/arch/arm/configs/cyanogenmod_ms013g_defconfig
@@ -36,6 +36,7 @@ CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
 CONFIG_SECCOMP=y
+CONFIG_SECCOMP_FILTER=y
 
 #
 # General setup
@@ -900,7 +901,6 @@ CONFIG_ENABLE_VMALLOC_SAVING=y
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
-# CONFIG_SECCOMP is not set
 CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 # CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART is not set
